JG-2004-07-29-0: Bugfix:    qrsh starter didn't output reason (strerror), if it
                            couldn't write its pid file.
                 Changed:   qrsh_starter
                 Review:    CR
                            
AA-2004-07-28-0: Bugfix:    Wallclock time limit in qmon
                 Bugtraq:   5078783
                 Issue:     1162
                 Changed:   qmon
                 Review:    CR

SG-2004-07-28-0: Bugfix:    - fixed the event master theading problem
                            - fixed the job names and accouting string evaluation.
                            - removed an abort in qmaster, when sched conf was not
                              valid.
                 Bugtraq:   5075849
                 Issue:     1099
                 Changed:   qmaster, submit.1
                 Review:    JG

JG-2004-07-27-0: Bugfix:    Fixes in reporting file:
                            - pe_task_id for non pe jobs were inconsistend (in 
                              some cases "none", in others "NONE").
                            - Intermediate accounting records contained invalid
                              data for submission_time and start_time.
                 Changed:   sge_qmaster
                 Bugtraq:   5078872
                 Bugfix:    Fixed a memory leak when reading from Berkeley DB.
                 Review:    RH

RH-2004-07-26-1: Bugfix:    definition of wc_cqueue added to man page.              
                 Issue:     1103
                 Bugtraq:   Not defined
                 Changed:   sge_types(1)
                 Review:    AH
                 
RH-2004-07-26-0: Bugfix:    man page indicated that qsub accepts "-r yes|no"
                 Issue:     1103
                 Bugtraq:   ????

SG-2004-07-26-0: Bugfix:    - first part of the event_master changes. The total
                            update of a event client is now thread save.