@@ -521,7 +521,7 @@ if [ $SHADOW = "install" ]; then
       export SGE_CELL
  
       if [ $HOST = "" ]; then
-         SHADOW_HOST=`hostname`
+         SHADOW_HOST=`$SGE_UTILBIN/gethostname -aname`
       else
          SHADOW_HOST=$HOST
       fi
@@ -534,7 +534,7 @@ if [ $SHADOW = "install" ]; then
       mod_file="echo $SHADOW_HOST"
       ExecuteAsAdmin $mod_file >> $SGE_ROOT/$SGE_CELL/common/shadow_masters
  
-      if [ $SHADOW_HOST = `hostname` ]; then
+      if [ $SHADOW_HOST = `$SGE_UTILBIN/gethostname -aname` ]; then
          . $SGE_ROOT/$SGE_CELL/common/settings.sh
          SGE_ARCH=`$SGE_ROOT/util/arch`
          $SGE_ROOT/bin/$SGE_ARCH/sge_shadowd &
@@ -576,7 +576,7 @@ if [ $SHADOW = "uninstall" ]; then
 
    fi
 
-   if [ $s_host = `hostname` ]; then
+   if [ $s_host = `$SGE_UTILBIN/gethostname -aname` ]; then
       ret=$SGE_UTILBIN/checkprog $s_pid shadowd
       if [ $ret = 0 ]; then
          $SGE_ROOT/$SGE_CELL/common/sgemaster -shadowd stop
