@@ -1,3 +1,12 @@
+CR-2004-07-28-1  Bugfix:    - Startup of qmaster changes act_qmaster to 
+                              `hostname`,
+                            - Two network cards in exec host: creates wrong 
+                              directory / shutdown fails
+                 Bugtraq:   5071522, 5079514
+                 Issue:     1110, 1113
+                 Changed:   install scripts, shadowd, gdi lib
+                 Review:    RH
+
 JG-2004-07-29-0: Bugfix:    qrsh starter didn't output reason (strerror), if it
                             couldn't write its pid file.
                  Changed:   qrsh_starter
